name:                tapf-shapes
version:             0.1.0.0
synopsis:            A simple DSEL for geometric shapes
-- description:
homepage:            https://github.com/pbv/tapf-shapes
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Teaching
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TAPF.Shape
                       TAPF.Shape.Render
  other-modules:       TAPF.Shape.Deep
                       TAPF.Shape.Shallow
                       TAPF.Shape.Matrix
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbv/tapf-shapes
